Added a way to insert new records into the database, implementing the addAllLocations methods in the last commit.
Added a FAB that redirects users to add a new record

Styled the List View with some basic styling elements

C(done)R(done)U()D()

--- a/app/src/main/res/layout/location_layout.xml
+++ b/app/src/main/res/layout/location_layout.xml
@@ -1,24 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/view_bg">
 
 
     <TextView
         android:id="@+id/textViewLat"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
+        android:gravity="left"
+        android:layout_marginRight="20dp"
+        android:textSize="15dp"
+
+        />
     <TextView
         android:id="@+id/textViewLong"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
+        android:gravity="left"
+        android:layout_marginRight="40dp"
+        android:textSize="15dp"/>
     <TextView
         android:id="@+id/textViewAction"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:textSize="20dp"
+        android:layout_marginRight="20dp"/>
     <TextView
         android:id="@+id/textViewDateTime"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="right"
+        android:textColor="@color/white"
+        android:textSize="15dp"/>
 
 </LinearLayout>
