--- a/app/src/main/res/layout/location_layout.xml
+++ b/app/src/main/res/layout/location_layout.xml
@@ -7,45 +7,48 @@
 
 
     <TextView
-        android:id="@+id/textViewLat"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewAction"
+        android:layout_weight="1.3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:padding="10dp"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:gravity="left"
-        android:layout_marginRight="20dp"
+        android:textSize="25dp"/>
+
+    <TextView
+        android:id="@+id/textViewSimpleLocation"
+        android:layout_weight="0.8"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:gravity="right"
         android:textSize="15dp"
+        android:maxLines="2"
 
         />
     <TextView
-        android:id="@+id/textViewLong"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewDash"
+        android:layout_weight="0.2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/white"
-        android:gravity="left"
-        android:layout_marginRight="40dp"
-        android:textSize="15dp"/>
-    <TextView
-        android:id="@+id/textViewAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:padding="5dp"
         android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:layout_marginRight="20dp"/>
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:text="-"/>
+
     <TextView
         android:id="@+id/textViewDateTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:padding="10dp"
         android:gravity="right"
+        android:maxLines="4"
+        android:lines="2"
         android:textColor="@color/white"
         android:textSize="15dp"/>
 
