Added google account saving into the database
Database saves google name, google email, and google photo as a blob in the database

Users can sign out and sign in to other google accounts and see other users "check-ins"

--- a/app/src/main/res/layout/layout_edit.xml
+++ b/app/src/main/res/layout/layout_edit.xml
@@ -38,6 +38,12 @@
             android:textSize="15dp"
             android:layout_above="@+id/lblDate"
             android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:scaleType="center"
+            android:id="@+id/imgProfilePicture"/>
 
         <TextView
 
