--- a/app/src/main/res/layout/location_layout.xml
+++ b/app/src/main/res/layout/location_layout.xml
@@ -16,12 +16,25 @@
         android:textStyle="bold"
         android:gravity="left"
         android:textSize="25dp"/>
+    <!-- users name -->
+    <TextView
+        android:id="@+id/textViewName"
+        android:layout_weight="0.8"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:gravity="right"
+        android:textSize="5dp"
+        android:maxLines="2"
+
+        />
 
     <TextView
         android:id="@+id/textViewSimpleLocation"
         android:layout_weight="0.8"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:textColor="@color/white"
         android:gravity="right"
@@ -44,7 +57,7 @@
         android:id="@+id/textViewDateTime"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         android:gravity="right"
         android:maxLines="4"
