--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.9"
+        android:layout_weight="3.2"
         android:text=""
         android:textSize="60sp"
         android:textStyle="bold"
@@ -32,7 +32,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
@@ -46,17 +46,22 @@
                 android:layout_centerHorizontal="true">
             </com.google.android.gms.common.SignInButton>
 
-            <Button
+            <TextView
                 android:id="@+id/disconnect_button"
                 android:layout_width="285dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="Disconnect"
+                android:text="Disconnect from Google"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-condensed"
+                android:textStyle="bold"
+                android:textColor="@color/white"
 
                 android:layout_gravity="center_horizontal"
                 android:layout_below="@+id/sign_in_button"
                 android:layout_alignStart="@+id/sign_in_button">
-            </Button>
+            </TextView>
 
 
 
