--- a/app/src/main/res/layout/location_layout.xml
+++ b/app/src/main/res/layout/location_layout.xml
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:gravity="left"
+                android:gravity="center"
                 android:textSize="20sp"
                 android:fontFamily="sans-serif-thin"
                 android:textStyle="bold"/>
