--- a/app/src/main/res/layout/layout_designer.xml
+++ b/app/src/main/res/layout/layout_designer.xml
@@ -28,14 +28,14 @@
         android:layout_weight="1">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="0.3"
+                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_height="match_parent"
                 >
@@ -46,29 +46,13 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:scaleType="fitXY"
+                        android:padding="10dp"
+                        android:id="@+id/imgProfilePicture"/>
 
-                        android:id="@+id/imgProfilePicture"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:padding="2dp"
-                        android:layout_gravity="center_vertical"
-
-                        android:scaleType="fitCenter"
-                        app:riv_corner_radius="35dip"
-                        app:riv_border_width="1dip"
-                        app:riv_border_color="#333333"
-                        app:riv_mutate_background="true"
-                        app:riv_oval="true"
-                        />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -80,10 +64,9 @@
                         android:id="@+id/time_ago"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:padding="2dp"
                         android:layout_gravity="center_vertical"
                         android:scaleType="fitXY"
-                        android:tint="@color/grey"
                         app:srcCompat="@drawable/ic_access_time_black_24px"
                         />
 
@@ -94,34 +77,12 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:scaleType="fitXY"
-                        android:tint="@color/grey"
-                        app:srcCompat="@drawable/ic_location_on_black_24px"
-                        />
-
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/email"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:layout_gravity="center_vertical"
-                        android:scaleType="fitXY"
-                        android:tint="@color/grey"
-                        app:srcCompat="@drawable/ic_email_black_24px"
-                        />
 
                 </LinearLayout>
 
@@ -145,10 +106,7 @@
                         android:layout_height="wrap_content"
 
                         android:inputType="text"
-                        android:textColor="@color/black"
-
-                        android:layout_gravity="center_vertical"
-                        android:textStyle="bold"
+                        android:textColor="@color/colorAccent"
                         android:textSize="45sp"
                         android:maxLength="20"
                         android:background="@android:color/transparent"/>
@@ -160,31 +118,15 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/grey"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/lblDate"
                         android:padding="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:layout_gravity="center_vertical"/>
+                        android:textColor="@color/colorAccent"
+                        android:textSize="15sp"/>
 
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/grey"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -196,15 +138,10 @@
                         android:padding="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:layout_gravity="center_vertical"/>
+                        android:textColor="@color/colorAccent"
+                        android:textSize="15sp" />
 
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/grey"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -216,13 +153,8 @@
                         android:padding="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:layout_gravity="center_vertical"
-                        android:onClick="onEmailClick"
-                        android:autoLink="email"
-                        android:clickable="true"
-                        />
+                        android:textColor="@color/colorAccent"
+                        android:textSize="15sp"/>
 
                 </LinearLayout>
 
